crates/vize_maestro/src/ide/jsx/snapshots/vize_maestro__ide__jsx__virtual_ts__tests__jsx_file_mode_mappings.snap
---
source: crates/vize_maestro/src/ide/jsx/virtual_ts_tests.rs
expression: "mapping_summary(source, &generated)"
---
[
    MappingSummary {
        generated: "export const Plain = ({ msg }) => ",
        source: "export const Plain = ({ msg }) => ",
        gen_range: 840..874,
        src_range: 0..34,
    },
    MappingSummary {
        generated: "() => save(msg)",
        source: "() => save(msg)",
        gen_range: 892..907,
        src_range: 51..66,
    },
    MappingSummary {
        generated: "msg",
        source: "msg",
        gen_range: 909..912,
        src_range: 69..72,
    },
    MappingSummary {
        generated: ";\n",
        source: ";\n",
        gen_range: 913..915,
        src_range: 82..84,
    },
]
